Added implementation of CustomPublisher this for supporting undertow, added undertow profile, partial added stop feature